tests/failed/03-repr-failed.stderr
error: conflicting representation hints
 --> tests/failed/03-repr-failed.rs:4:13
  |
4 | #[repr(i32, i64)]
  |             ^^^

error[E0600]: cannot apply unary operator `-` to type `u64`
 --> tests/failed/03-repr-failed.rs:9:23
  |
9 | enum UnsizeRepr { A = -1 }
  |                       ^^
  |                       |
  |                       cannot apply unary operator `-`
  |                       help: you may have meant the maximum value of `u64`: `u64::MAX`
  |
  = note: unsigned values cannot be negated
